[package]
name = "rifs"
version = "0.1.0"
edition = "2021"
description = "Rust图床服务 - 高性能图片存储和转换服务"
authors = ["djkcyl <cyl@cyllive.cn>"]
license = "MIT"
repository = "https://github.com/djkcyl/rifs"
homepage = "https://github.com/djkcyl/rifs"
keywords = ["image-server", "rust", "file-upload", "web-service", "image-processing"]
categories = ["web-programming", "multimedia::images"]

# 构建体积优化配置
[profile.release]
# 最高级别的优化
opt-level = 3
# 启用链接时优化，显著减少体积
lto = true
# 使用单个代码生成单元以获得更好的优化
codegen-units = 1
# 启用panic时直接中止，减少unwinding代码
panic = "abort"
# 去除调试符号，大幅减少体积
strip = true

# 进一步优化的release配置
[profile.release-small]
inherits = "release"
# 优化体积而非速度
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# Web 框架 - 启用必需的features
axum = { version = "0.8", features = ["multipart", "json", "tokio", "http1", "query"], default-features = false }

# 异步运行时 - 只启用必需的features
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "fs", "io-util", "macros", "signal"], default-features = false }

# HTTP 服务器 - 启用必需features
tower = { version = "0.5", features = ["util", "timeout"], default-features = false }
tower-http = { version = "0.6", features = ["cors", "trace"], default-features = false }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }

# 错误处理
anyhow = { version = "1.0", features = ["std"] }
thiserror = { version = "2.0" }

# 日志
tracing = { version = "0.1", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "std", "json", "time"], default-features = false }
tracing-appender = { version = "0.2", features = ["parking_lot"] }

# 配置文件
config = { version = "0.15", features = ["toml"], default-features = false }
toml = { version = "0.8", features = ["parse"], default-features = false }

# 数据库支持 - SeaORM
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono"], default-features = false }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"], default-features = false }
async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false }

# 数据库连接池
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid"], default-features = false }

# 加密哈希
sha2 = { version = "0.10", default-features = false }

# 文件类型检测
infer = { version = "0.19", default-features = false }

# 图片格式支持 - 主流格式编解码器支持
image = { version = "0.25", features = ["jpeg", "png", "gif", "ico", "webp", "avif", "rayon"], default-features = false }

# WebP处理库 - 支持静态WebP质量控制编码
webp = { version = "0.3", default-features = false }

# GIF处理库 - 用于检测GIF帧数和提取第一帧
gif = { version = "0.13", default-features = false }
